# Product-Importer

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  Screening Task – SDE 1.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway-start.sh  requirements.txt
backend/src/product_importer/: __init__.py  main.py
backend/src/product_importer/api/routes/: __init__.py  health.py  products.py  uploads.py  webhooks.py
backend/src/product_importer/core/: config.py
backend/src/product_importer/db/: deps.py  session.py  storage_deps.py
backend/src/product_importer/models/: __init__.py  base.py  product.py  upload_job.py  webhook.py
backend/src/product_importer/schemas/: product.py  upload.py  webhook.py
backend/src/product_importer/services/: events.py  product_service.py  s3_storage.py  storage.py  upload_service.py  webhook_service.py
backend/src/product_importer/workers/: celery_app.py
backend/src/product_importer/workers/tasks/: __init__.py  ingestion.py  webhooks.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  products.ts  uploads.ts  webhooks.ts
web/src/components/: Layout.css  Layout.tsx
web/src/pages/: ProductsPage.tsx  UploadPage.tsx  WebhooksPage.tsx
web/src/styles/: index.css
web/src/types/: index.ts
