[tool.poetry]
name = "product-importer"
version = "0.1.0"
description = "Scalable product importer platform for CSV ingestion and webhook automation"
authors = ["Rohan <you@example.com>"]
readme = "README.md"
packages = [{ include = "product_importer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
sqlalchemy = "^2.0.36"
psycopg = { extras = ["binary"], version = "^3.2.4" }
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
celery = "^5.4.0"
redis = "^5.1.1"
pendulum = "^3.0.0"
httpx = "^0.27.2"
typer = "^0.12.5"
loguru = "^0.7.2"
python-multipart = "^0.0.9"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
